add sound to guideline and setting button

--- a/ProjectSuatuHari/Home/Base.lproj/Main.storyboard
+++ b/ProjectSuatuHari/Home/Base.lproj/Main.storyboard
@@ -83,6 +83,9 @@
                                 <buttonConfiguration key="configuration" style="plain" image="questionmark.circle" catalog="system" title="">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="41" weight="bold"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="guidelineButtonPressed:" destination="qxs-P2-X2M" eventType="touchUpInside" id="9As-bh-R5U"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ffn-ev-6kH">
                                 <rect key="frame" x="1248" y="63" width="87" height="63"/>
@@ -91,6 +94,9 @@
                                 <buttonConfiguration key="configuration" style="plain" image="gearshape.circle" catalog="system" title="">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="41" weight="bold"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="settingButtonPressed:" destination="qxs-P2-X2M" eventType="touchUpInside" id="5wu-qH-lc4"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vOf-5L-E4C">
                                 <rect key="frame" x="91" y="65" width="160" height="55"/>
